Fixed issue: KNOWAGE-1826:"Ordinare sulle misure della crosstab" (https://production.eng.it/jira/browse/KNOWAGE-1826)